sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:12: error: not found: value i
    i=0
    ^AlgCombSort:14: error: not found: value i
    while (i+ecart < n ){
           ^AlgCombSort:15: error: not found: value i
      if (getValeur(i)>getValeur(i+ecart)){
                    ^AlgCombSort:15: error: not found: value i
      if (getValeur(i)>getValeur(i+ecart)){
                                 ^AlgCombSort:16: error: not found: value i
        echange(i,i+ecart)
                ^AlgCombSort:16: error: not found: value i
        echange(i,i+ecart)
                  ^AlgCombSort:18: error: not found: value i
      i+=1
      ^